--- a/Dev2AssessorApp/Src/SafetyHeaderScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/SafetyHeaderScreen.fx.yaml
@@ -20,8 +20,7 @@ SafetyHeaderScreen As screen:
 
         ctnMiddleSafetyHeader As groupContainer.verticalAutoLayoutContainer:
             Height: |
-                =//'ctnBack&onlinestatusPS_3'.Height+ctnBankGo_2.Height
-                Parent.Height
+                =Parent.Height
             LayoutDirection: =LayoutDirection.Vertical
             LayoutGap: =10
             LayoutMode: =LayoutMode.Auto
@@ -70,10 +69,9 @@ SafetyHeaderScreen As screen:
                         Height: =ctnBackButtonSH.Height/1.5
                         HoverColor: =RGBA(0, 0, 0, 1)
                         HoverFill: =
-                        OnSelect: |-
+                        OnSelect: |+
                             =Back();
                             
-                            //ForAll(Gallery6_1.AllItems,Reset(ThisRecord.Checkbox5));
                         PaddingBottom: =10
                         PaddingLeft: =20
                         PaddingRight: =10
@@ -97,9 +95,7 @@ SafetyHeaderScreen As screen:
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 Width: =Parent.Width
-                Y: |-
-                    =//ctnClintName_2.Height
-                    'ctnBack&onlinestatusSS'.Y +'ctnBack&onlinestatusSS'.Height
+                Y: ='ctnBack&onlinestatusSS'.Y +'ctnBack&onlinestatusSS'.Height
                 ZIndex: =3
 
                 ctnNotonemore As groupContainer.verticalAutoLayoutContainer:
@@ -136,7 +132,7 @@ SafetyHeaderScreen As screen:
                 ctnsMainafetyAdvice As groupContainer.horizontalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
                     FillPortions: =0
-                    Height: =120//lblAssStatusBS_21.Height +Label22_4.Height+10
+                    Height: =120
                     LayoutDirection: =LayoutDirection.Vertical
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
@@ -163,7 +159,7 @@ SafetyHeaderScreen As screen:
                         Font: =AllScreensCSS.RFont
                         FontWeight: =FontWeight.Semibold
                         Height: =70
-                        OnSelect: =//Select(Parent)
+                        OnSelect: =
                         PaddingBottom: =15
                         PaddingLeft: =10
                         Size: =AllScreensCSS.RfontsizeInput
@@ -190,9 +186,7 @@ SafetyHeaderScreen As screen:
                     ShowScrollbar: =false
                     TemplatePadding: =6
                     TemplateSize: =50
-                    Visible: |-
-                        =//true
-                        Q
+                    Visible: =Q
                     Width: =Parent.Width
                     X: =40
                     Y: =ctnsMainafetyAdvice.Y + ctnsMainafetyAdvice.Height+10
@@ -272,9 +266,7 @@ SafetyHeaderScreen As screen:
                         LayoutMinHeight: =287
                         LayoutMinWidth: =320
                         TemplateSize: =60
-                        Visible: |-
-                            =//true
-                            Q
+                        Visible: =Q
                         Width: =Parent.Width
                         Y: =lblSafetycheck.Y+lblSafetycheck.Height
                         ZIndex: =2
@@ -282,25 +274,15 @@ SafetyHeaderScreen As screen:
                         cboxSafetyCheck As checkbox:
                             CheckboxBorderColor: =RGBA(0, 0, 0, 1)
                             CheckboxSize: =30
-                            Default: |-
+                            Default: |+
                                 =//for safety check to show default selected
                                 If(varSafety = true,true,false)
                                 
-                                
-                                /*If(CountRows(Filter(GC_unitAssessment,bankUnitId.Id=varBankUnitId && assignmentId.Id=glryProject.Selected.Id &&Assessment_status= "Inprogress"))>0,true,false)*/
-                            FocusedBorderThickness: =//2
-                            HoverBorderColor: |-
-                                =//ColorFade(Self.BorderColor, 30%)
-                                Self.Color
-                            HoverColor: |-
-                                =//RGBA(0, 18, 107, 1)
-                                Self.Color
+                            FocusedBorderThickness: =
+                            HoverBorderColor: =Self.Color
+                            HoverColor: =Self.Color
                             OnSelect: =Select(Parent)
-                            PressedBorderColor: =//ColorFade(Self.BorderColor, -30%)
-                            Reset: |-
-                                =////If(CountRows(Filter(GC_unitAssessment,bankUnitId.Id=varBankUnitId && assignmentId.Id=glryProject.Selected.Id &&Assessment_status= "start"))>0,false,true)
-                                //varCheckboxReset
-                                false
+                            PressedBorderColor: =
                             Size: =AllScreensCSS.RfontsizeInput
                             Text: =ThisItem.Value
                             Width: =Parent.Width-100
@@ -332,27 +314,21 @@ SafetyHeaderScreen As screen:
                     btnsafetycheck As button:
                         AlignInContainer: =AlignInContainer.Center
                         BorderThickness: =0
-                        DisplayMode: |
-                            =If(CountRows(Filter(glrySafetyCheck.AllItems,ThisRecord.cboxSafetyCheck.Value = false))<1,DisplayMode.Edit,DisplayMode.Disabled)
-                            
-                            
-                            /*
-                            If(!IsBlank(Filter(GC_unitAssessment,bankUnitId.Id=varBankUnitId && assignmentId.Id=glryProject.Selected.Id &&Assessment_status= "start")),DisplayMode.Disabled
-                            ,
-                            If(CountRows(Filter(Gallery6_1.AllItems,ThisRecord.Checkbox5.Value = false))<1,DisplayMode.Edit,DisplayMode.Disabled)
-                            )*/
-                            
-                            /*If(!IsBlank(Filter(GC_unitAssessment,bankUnitId.Id=varBankUnitId && assignmentId.Id=glryProject.Selected.Id &&Assessment_status= "start")) && CountRows(Filter(Gallery6_1.AllItems,ThisRecord.Checkbox5.Value = false))>1,DisplayMode.Disabled
-                            ,
-                            DisplayMode.Edit
+                        DisplayMode: |-
+                            =If(
+                                CountRows(
+                                    Filter(
+                                        glrySafetyCheck.AllItems,
+                                        ThisRecord.cboxSafetyCheck.Value = false
+                                    )
+                                ) < 1,
+                                DisplayMode.Edit,
+                                DisplayMode.Disabled
                             )
-                            */
                         Fill: =AllScreensCSS.RActiveColor
-                        FocusedBorderThickness: =//4
-                        HoverBorderColor: =//ColorFade(Self.BorderColor, 20%)
-                        HoverFill: |-
-                            =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            Self.Fill
+                        FocusedBorderThickness: =
+                        HoverBorderColor: =
+                        HoverFill: =Self.Fill
                         OnSelect: |-
                             =
                             Clear(security);
@@ -380,10 +356,6 @@ SafetyHeaderScreen As screen:
                                 //for safety check to show default selected
                                 Set(varSafety,true);
                             
-                                /*UpdateIf(
-                                    GC_unitAssessment,bankUnitId.Id=varBankUnitId && assignmentId.Id=glryProject.Selected.Id,
-                                    {Assessment_status: "Inprogress"}
-                                );*/
                                 Navigate(SectionScreen),
                                 Notify(
                                     "Check boxes required for each item and you cannot proceed without checking each box.",
