--- a/Dev2AssessorApp/Src/AssessmentScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/AssessmentScreen.fx.yaml
@@ -1914,7 +1914,7 @@ AssessmentScreen As screen:
                             ClearCollect(
                                             TempCheckpointItem_Images,
                                             Filter(
-                                                checkpointItem_Images,
+                                                RenameColumns(ShowColumns(checkpointItem_Images,"quantum_checkpointitem_imagesid","quantum_checkpointitemimagesid","shlaf_assignmentId","shlaf_bankUnitId","shlaf_checkpoint_id"),"quantum_checkpointitem_imagesid","checkpointItem_Images","quantum_checkpointitemimagesid","checkpointItemImagesId","shlaf_assignmentId","assignmentId","shlaf_bankUnitId","bankUnitId","shlaf_checkpoint_id","checkpoint_id"),
                                                 assignmentId.assessorId = varLoggedAssessor && assignmentId.Id = varAssignmentId && bankUnitId.Id = varBankUnitId && checkpoint_id.checkpointAssessment_id = GuidId
                                             )
                                         );
@@ -1925,7 +1925,7 @@ AssessmentScreen As screen:
                                                 GC_checkpointItem_Images,
                                                 checkpointItemImagesId = i.checkpointItemImagesId && CIIstatusUpdate = 1,
                                                 {
-                                                    checkpointItem_Images: i.checkpointItem_Images,
+                                                    checkpointItem_Images: i.checkpointItem_Images,//unique key
                                                     CIIstatusUpdate: 2
                                                 }
                                             )
